finished authentication methods for Cloud

--- a/LanguageWeaverProvider/LanguageWeaverProvider.csproj
+++ b/LanguageWeaverProvider/LanguageWeaverProvider.csproj
@@ -23,23 +23,15 @@
 	  <Compile Remove="Helpers\**" />
 	  <Compile Remove="Interface\**" />
 	  <Compile Remove="ServiceClients\**" />
-	  <Compile Remove="ViewModel\Edge\**" />
-	  <Compile Remove="View\Edge\**" />
 	  <EmbeddedResource Remove="Helpers\**" />
 	  <EmbeddedResource Remove="Interface\**" />
 	  <EmbeddedResource Remove="ServiceClients\**" />
-	  <EmbeddedResource Remove="ViewModel\Edge\**" />
-	  <EmbeddedResource Remove="View\Edge\**" />
 	  <None Remove="Helpers\**" />
 	  <None Remove="Interface\**" />
 	  <None Remove="ServiceClients\**" />
-	  <None Remove="ViewModel\Edge\**" />
-	  <None Remove="View\Edge\**" />
 	  <Page Remove="Helpers\**" />
 	  <Page Remove="Interface\**" />
 	  <Page Remove="ServiceClients\**" />
-	  <Page Remove="ViewModel\Edge\**" />
-	  <Page Remove="View\Edge\**" />
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -122,5 +114,9 @@
 	    <AutoGen>True</AutoGen>
 	    <DependentUpon>PluginResources.resx</DependentUpon>
 	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="View\Edge\" />
 	</ItemGroup>
 </Project>
