--- a/LanguageWeaverProvider/LanguageWeaverProvider.csproj
+++ b/LanguageWeaverProvider/LanguageWeaverProvider.csproj
@@ -96,6 +96,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="LanguageMappingProvider" Version="1.0.92" />
 		<PackageReference Include="Sdl.Core.PluginFramework">
 			<Version>2.1.0</Version>
 		</PackageReference>
