--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/Sdl.Community.DeepLMTProvider.csproj
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/Sdl.Community.DeepLMTProvider.csproj
@@ -120,6 +120,8 @@
     <Compile Include="Command\NoParameterCommand.cs" />
     <Compile Include="Command\CommandWithParameter.cs" />
     <Compile Include="Extensions\CultureNameExtensions.cs" />
+    <Compile Include="Extensions\EnumerableExtensions.cs" />
+    <Compile Include="Extensions\ErrorHandler.cs" />
     <Compile Include="Helpers\TsvReaderWriter.cs" />
     <Compile Include="Interface\IDeepLGlossaryClient.cs" />
     <Compile Include="Interface\IGlossaryBrowserService.cs" />
