--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/Sdl.Community.DeepLMTProvider.csproj
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/Sdl.Community.DeepLMTProvider.csproj
@@ -23,7 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>9</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,7 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>9</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -117,22 +117,32 @@
   <ItemGroup>
     <Compile Include="Client\DeepLGlossaryClient.cs" />
     <Compile Include="Command\AsyncParameterlessCommand.cs" />
-    <Compile Include="Command\NoParameterCommand.cs" />
+    <Compile Include="Command\ParameterlessCommand.cs" />
     <Compile Include="Command\CommandWithParameter.cs" />
+    <Compile Include="Extensions\ActionResult.cs" />
     <Compile Include="Extensions\CultureNameExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\ErrorHandler.cs" />
+    <Compile Include="Helpers\GlossaryReadersWriters\GlossaryReaderWriterFactory.cs" />
+    <Compile Include="Helpers\GlossaryReadersWriters\TsvGlossaryReaderWriter.cs" />
+    <Compile Include="Helpers\OpenFileDialogWrapper.cs" />
     <Compile Include="Helpers\TsvReaderWriter.cs" />
     <Compile Include="Interface\IDeepLGlossaryClient.cs" />
     <Compile Include="Interface\IGlossaryBrowserService.cs" />
+    <Compile Include="Interface\IGlossaryReaderWriter.cs" />
+    <Compile Include="Interface\IGlossaryReaderWriterFactory.cs" />
+    <Compile Include="Interface\IGlossaryReaderWriterService.cs" />
     <Compile Include="Interface\IMessageService.cs" />
+    <Compile Include="Interface\IOpenFileDialog.cs" />
     <Compile Include="Interface\ITsvReaderWriter.cs" />
     <Compile Include="Model\Glossary.cs" />
     <Compile Include="Model\GlossaryEntry.cs" />
     <Compile Include="Model\GlossaryInfo.cs" />
+    <Compile Include="Model\GlossaryItem.cs" />
     <Compile Include="Model\GlossaryLanguagePair.cs" />
     <Compile Include="Model\LanguagePairOptions.cs" />
     <Compile Include="Service\GlossaryBrowserService.cs" />
+    <Compile Include="Service\GlossaryReaderWriterService.cs" />
     <Compile Include="Service\MessageService.cs" />
     <Compile Include="Studio\Actions\ImportGlossaryAction.cs" />
     <Compile Include="Studio\DeepLMtTranslationProvider.cs" />
@@ -167,6 +177,9 @@
     <Compile Include="Helpers\StringExtensions.cs" />
     <Compile Include="AppInitializer.cs" />
     <Compile Include="Client\DeepLTranslationProviderClient.cs" />
+    <Compile Include="UI\BrowseGlossariesWindow.xaml.cs">
+      <DependentUpon>BrowseGlossariesWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Controls\BrowsePathControl.xaml.cs">
       <DependentUpon>BrowsePathControl.xaml</DependentUpon>
     </Compile>
@@ -179,9 +192,6 @@
     <Compile Include="UI\GlossariesWindow.xaml.cs">
       <DependentUpon>GlossariesWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UI\BrowseGlossaryWindow.xaml.cs">
-      <DependentUpon>BrowseGlossaryWindow.xaml</DependentUpon>
-    </Compile>
     <Compile Include="UI\UiHelpers\WindowsControl.xaml.cs">
       <DependentUpon>WindowsControl.xaml</DependentUpon>
     </Compile>
@@ -191,6 +201,7 @@
     <None Include="SdlCommunity.snk" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resources\Export_64b.png" />
     <None Include="Resources\Settings.ico" />
     <EmbeddedResource Include="Resources\ForumIcon.ico" />
     <EmbeddedResource Include="Resources\TellMe1.ico" />
@@ -225,6 +236,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Page Include="UI\BrowseGlossariesWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UI\Controls\BrowsePathControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -237,9 +252,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UI\BrowseGlossaryWindow.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="UI\UiHelpers\ProgressRingStyle.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="UI\UiHelpers\ButtonsStyle.xaml">
       <Generator>MSBuild:Compile</Generator>
