--- a/StudioViews/StudioViews/StudioViews.csproj
+++ b/StudioViews/StudioViews/StudioViews.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Controls\NumericUpDown.cs" />
     <Compile Include="Controls\SelectedItemsAwareDataGrid.cs" />
     <Compile Include="Controls\SortAwareDataGrid.cs" />
+    <Compile Include="Controls\TextBoxWithEllipsis.cs" />
     <Compile Include="Extensions\ParagraphUnitExtensions.cs" />
     <Compile Include="Model\AlignmentDataType.cs" />
     <Compile Include="Model\AlignmentInfo.cs" />
@@ -250,10 +251,10 @@
       <Version>17.0.0</Version>
     </PackageReference>
     <PackageReference Include="Trados.Community.Toolkit.Core">
-      <Version>4.1.0</Version>
+      <Version>4.1.1</Version>
     </PackageReference>
     <PackageReference Include="Trados.Community.Toolkit.LanguagePlatform">
-      <Version>4.1.0</Version>
+      <Version>4.1.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
