Resolved teh reported issue update Studio 2022 Plugins: Record Source TU Jira : SDLCOM-4953

--- a/Record Source TU/Sdl.Community.RecordSourceTU/Sdl.Community.RecordSourceTU.csproj
+++ b/Record Source TU/Sdl.Community.RecordSourceTU/Sdl.Community.RecordSourceTU.csproj
@@ -19,6 +19,9 @@
     <Reference Include="Sdl.Core.Globalization">
       <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Core.Globalization.dll</HintPath>
     </Reference>
+		<Reference Include="Sdl.Core.Globalization.Async">
+			<HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Core.Globalization.Async.dll</HintPath>
+		</Reference>
     <Reference Include="Sdl.Desktop.IntegrationApi">
       <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Desktop.IntegrationApi.dll</HintPath>
     </Reference>
