Post-Edit Compare: update the toolkit references to a compatible release for SR1

--- a/Post Edit Compare/Sdl.Community.PostEdit.Compare.Core/Sdl.Community.PostEdit.Compare.Core.csproj
+++ b/Post Edit Compare/Sdl.Community.PostEdit.Compare.Core/Sdl.Community.PostEdit.Compare.Core.csproj
@@ -175,8 +175,11 @@
     <PackageReference Include="EPPlus">
       <Version>4.5.3.3</Version>
     </PackageReference>
+    <PackageReference Include="Trados.Community.Toolkit.Core">
+      <Version>4.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Trados.Community.Toolkit.LanguagePlatform">
-      <Version>4.1.0</Version>
+      <Version>4.1.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
