--- a/SDLTranscreate/SDLTranscreate/Transcreate.csproj
+++ b/SDLTranscreate/SDLTranscreate/Transcreate.csproj
@@ -415,8 +415,11 @@
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
       <Version>17.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Trados.Community.Toolkit.Core">
+      <Version>4.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Trados.Community.Toolkit.LanguagePlatform">
-      <Version>4.1.0</Version>
+      <Version>4.1.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
