Import into existing glossary

--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/Sdl.Community.DeepLMTProvider.csproj
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/Sdl.Community.DeepLMTProvider.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\ErrorHandler.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Helpers\GlossaryEntriesExtensions.cs" />
     <Compile Include="Helpers\GlossaryReadersWriters\CsvGlossaryReaderWriter.cs" />
     <Compile Include="Helpers\GlossaryReadersWriters\GlossaryReaderWriterFactory.cs" />
     <Compile Include="Helpers\GlossaryReadersWriters\TsvGlossaryReaderWriter.cs" />
