--- a/StudioViews/StudioViews/StudioViews.csproj
+++ b/StudioViews/StudioViews/StudioViews.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Model\TokenInfo.cs" />
     <Compile Include="Providers\DisplayFilter.cs" />
     <Compile Include="Providers\ParagraphUnitProvider.cs" />
+    <Compile Include="Services\LanguagePlatformSegmentVisitor.cs" />
     <Compile Include="Services\SegmentGenerator.cs" />
     <Compile Include="Services\ProjectFileService.cs" />
     <Compile Include="Services\ContentExporter.cs" />
@@ -179,8 +180,7 @@
     <Compile Include="Services\SdlxliffImporter.cs" />
     <Compile Include="Services\SdlxliffExporter.cs" />
     <Compile Include="Services\SegmentVisitor.cs" />
-    <Compile Include="Services\SegmentWordCounts.cs" />
-    <Compile Include="Services\Tokenizer.cs" />
+    <Compile Include="Services\WordCountProvider.cs" />
     <Compile Include="TellMe\CommunityAppStoreAction.cs" />
     <Compile Include="TellMe\CommunityAppStoreForumAction.cs" />
     <Compile Include="TellMe\CommunityWikiAction.cs" />
@@ -261,12 +261,6 @@
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
       <Version>17.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Trados.Community.Toolkit.Core">
-      <Version>4.1.1</Version>
-    </PackageReference>
-    <PackageReference Include="Trados.Community.Toolkit.LanguagePlatform">
-      <Version>4.1.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
