Add possibility to choose glossary to which a new term is added

--- a/InterpretBank/InterpretBank/InterpretBank.csproj
+++ b/InterpretBank/InterpretBank/InterpretBank.csproj
@@ -135,6 +135,9 @@
     <Resource Include="Resources\logo.png" />
     <Resource Include="Resources\Tag.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UI\" />
+  </ItemGroup>
   <PropertyGroup>
     <CreatePluginPackage>true</CreatePluginPackage>
   </PropertyGroup>
