--- a/LanguageWeaverProvider/LanguageWeaverProvider.csproj
+++ b/LanguageWeaverProvider/LanguageWeaverProvider.csproj
@@ -67,6 +67,9 @@
 		<Reference Include="Sdl.FileTypeSupport.Framework.Core">
 		  <HintPath>$(TradosFolder)\Sdl.FileTypeSupport.Framework.Core.dll</HintPath>
 		</Reference>
+		<Reference Include="Sdl.FileTypeSupport.Framework.Core.Utilities">
+		  <HintPath>..\..\..\Program Files (x86)\Trados\Trados Studio\Studio17\Sdl.FileTypeSupport.Framework.Core.Utilities.dll</HintPath>
+		</Reference>
 		<Reference Include="Sdl.LanguagePlatform.Core">
 			<HintPath>$(TradosFolder)\Sdl.LanguagePlatform.Core.dll</HintPath>
 		</Reference>
@@ -75,6 +78,9 @@
 		</Reference>
 		<Reference Include="Sdl.LanguagePlatform.TranslationMemoryApi">
 			<HintPath>$(TradosFolder)\Sdl.LanguagePlatform.TranslationMemoryApi.dll</HintPath>
+		</Reference>
+		<Reference Include="Sdl.ProjectAutomation.AutomaticTasks">
+		  <HintPath>..\..\..\Program Files (x86)\Trados\Trados Studio\Studio17\Sdl.ProjectAutomation.AutomaticTasks.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.ProjectAutomation.Core">
 		  <HintPath>..\..\..\Program Files (x86)\Trados\Trados Studio\Studio17\Sdl.ProjectAutomation.Core.dll</HintPath>
